--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:cover:travis": "babel-node node_modules/isparta/bin/isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test:watch": "npm run test -- --watch"
   },
-  "author": "Cory House",
+  "author": "VinceHines",
   "license": "MIT",
   "dependencies": {
     "object-assign": "4.1.0",
